# CommercialRenderEngine

./: BUILD_VERIFICATION.md  CMakeLists.txt  CMakePresets.json  COMMERCIAL_AUDIT_DELTA_v33.md  PHASE28_STATUS.md  build_linux_headless_debug.sh  build_windows_validation.bat  build_windows_vs2022_debug.bat  vcpkg.json
.github/workflows/: ci.yml
build_logs/: stats.txt
docs/: FINAL_ROUND_ARCHITECTURE_v33.md  RENDERER_CORE_FINAL_ROUND_v33.md  UNIT_TEST_MODULE_v33.md
include/Meridian/Application/: Application.h
include/Meridian/Core/: FramePacer.h  MainLoop.h  Telemetry.h
include/Meridian/EditorFramework/: MainFrameWindow.h  StudioCommandIds.h  StudioDocument.h  StudioLayout.h
include/Meridian/Renderer/: BytecodeDiskIndex.h  Common.h  DescriptorLifetimeCompactor.h  DescriptorPoolCompactor.h  DescriptorPoolPageAllocator.h  EffectGraph.h  EffectQueueBatchLowerer.h  EffectToRenderPassLowerer.h  PersistentBytecodeStore.h  PipelineCompatibilityCache.h  PipelineCompiler.h  PipelineObjectModel.h  PsoCompatibilityGrouper.h  PsoObjectCompatibilityCache.h  QueueDomainLoweringCompiler.h  RenderDevice.h  RenderPassCompatibility.h  RenderPassMergePlanner.h  RenderPassObjectModel.h  RenderPreparationPipeline.h  ResidencyMigrationPlanner.h  ResourceDependencyCompiler.h  ResourceResidencyHistory.h  ShaderBytecodeCache.h  ShaderReflection.h  SwapchainModel.h  TransientAliasingPlanner.h  TransientHeapAllocator.h
scripts/linux/: build_headless_validation.sh  build_linux.sh  common_linux.sh  configure_linux.sh  package_linux.sh  test_linux.sh
scripts/windows/: build_headless_validation.bat  build_vs2022.bat  common_windows.bat  configure_vs2022.bat  finish_windows_script.bat  package_vs2022.bat  rebuild_all_vs2022.bat  test_vs2022.bat
src/Application/: Application.cpp
src/Core/: FramePacer.cpp  MainLoop.cpp  Telemetry.cpp
src/EditorFramework/: MainFrameWindow.cpp  StudioDocument.cpp  StudioLayout.cpp
src/Renderer/: BytecodeDiskIndex.cpp  Common.cpp  DescriptorLifetimeCompactor.cpp  DescriptorPoolCompactor.cpp  DescriptorPoolPageAllocator.cpp  EffectGraph.cpp  EffectQueueBatchLowerer.cpp  EffectToRenderPassLowerer.cpp  PersistentBytecodeStore.cpp  PipelineCompatibilityCache.cpp  PipelineCompiler.cpp  PipelineObjectModel.cpp  PsoCompatibilityGrouper.cpp  PsoObjectCompatibilityCache.cpp  QueueDomainLoweringCompiler.cpp  RenderDevice.cpp  RenderPassCompatibility.cpp  RenderPassMergePlanner.cpp  RenderPassObjectModel.cpp  RenderPreparationPipeline.cpp  ResidencyMigrationPlanner.cpp  ResourceDependencyCompiler.cpp  ResourceResidencyHistory.cpp  ShaderBytecodeCache.cpp  ShaderReflection.cpp  SwapchainModel.cpp  TransientAliasingPlanner.cpp  TransientHeapAllocator.cpp
tests/: regression_tests.cpp  unit_tests.cpp
tools/: headless_validation_main.cpp  meridian_studio_main.cpp
